// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createHttpHandler should return 400 for invalid JSON 1`] = `
"Request body is not valid json

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Version: 1.1.0.next-73"
`;

exports[`createHttpHandler should return 400 for invalid JSON-RPC request 1`] = `
"{"_errors":[],"params":{"_errors":["Expected object, received string","Expected array, received string"]}}

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Version: 1.1.0.next-73"
`;
